--- a/DynamoDrivenOdometerApp/app/src/main/res/values/strings.xml
+++ b/DynamoDrivenOdometerApp/app/src/main/res/values/strings.xml
@@ -15,7 +15,9 @@
     <string name="msgBleNotSupported">BLE is not supported</string>
     <string name="msgBluetoothNotSupported">Bluetooth not supported</string>
     <string name="menuScan">Scan</string>
+    <string name="menuScan">Scan</string>
     <string name="gattConnectedTrue">Gatt on</string>
     <string name="gattConnectedFalse">Gatt off</string>
+    <string name="switchPermanentLabel">Permanet</string>
 
 </resources>
